# hyperion

./: .dockerignore  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  README.md  ci.sh  clippy.toml  docker-compose.yml  flake.nix  justfile  package.json  pnpm-lock.yaml  process-compose.yml  rust-toolchain.toml
.cursor/rules/: general.mdc
.github/: codecov.yml  dependabot.yml
.github/workflows/: bench.yml  ci.yml  deploy.yml  integration.yml  lint.yml  nix.yml  publish.yml
antithesis/: docker-compose.yml
crates/bvh-region/benches/: sort.rs
crates/bvh-region/src/: build.rs  lib.rs
crates/bvh-region/src/query/: closest.rs  range.rs  ray.rs
crates/bvh-region/tests/: simple.rs
crates/geometry/: Cargo.toml  build.rs
crates/geometry/benches/: general.rs
crates/geometry/src/: aabb.rs  lib.rs  ray.rs
crates/hyperion/: Cargo.toml
crates/hyperion-clap/: Cargo.toml
crates/hyperion-clap-macros/src/: lib.rs
crates/hyperion-clap/src/: lib.rs
crates/hyperion-command/: Cargo.toml
crates/hyperion-command/src/: component.rs  lib.rs  system.rs
crates/hyperion-crafting/: Cargo.toml
crates/hyperion-crafting/src/: lib.rs
crates/hyperion-event-macros/src/: lib.rs
crates/hyperion-genmap/: Cargo.toml
crates/hyperion-genmap/src/: lib.rs
crates/hyperion-gui/: Cargo.toml
crates/hyperion-gui/src/: lib.rs
crates/hyperion-inventory/: Cargo.toml
crates/hyperion-inventory/src/: action.rs  lib.rs  parser.rs
crates/hyperion-item/: Cargo.toml
crates/hyperion-item/src/: builder.rs  lib.rs
crates/hyperion-item/src/builder/: book.rs
crates/hyperion-minecraft-proto/src/: lib.rs
crates/hyperion-nerd-font/: README.md
crates/hyperion-nerd-font/src/: lib.rs
crates/hyperion-packet-macros/: Cargo.toml  README.md
crates/hyperion-packet-macros/src/: lib.rs  packet.rs  replace.rs  state.rs
crates/hyperion-palette/: Cargo.toml
crates/hyperion-palette/src/: indirect.rs  lib.rs
crates/hyperion-permission/: Cargo.toml
crates/hyperion-permission/src/: lib.rs  storage.rs
crates/hyperion-proto/src/: lib.rs  proxy_to_server.rs  server_to_proxy.rs  shared.rs
crates/hyperion-proxy/: Cargo.toml
crates/hyperion-proxy-module/: Cargo.toml
crates/hyperion-proxy-module/src/: lib.rs
crates/hyperion-proxy/src/: cache.rs  data.rs  egress.rs  lib.rs  main.rs  player.rs  server_sender.rs
crates/hyperion-rank-tree/: Cargo.toml
crates/hyperion-rank-tree/src/: inventory.rs  lib.rs
crates/hyperion-respawn/: Cargo.toml
crates/hyperion-respawn/src/: lib.rs
crates/hyperion-scheduled/src/: lib.rs
crates/hyperion-stats/: Cargo.toml
crates/hyperion-stats/benches/: parallel_stats.rs
crates/hyperion-stats/src/: lib.rs
crates/hyperion-text/src/: color.rs  lib.rs
crates/hyperion-utils/: Cargo.toml
crates/hyperion-utils/src/: cached_save.rs  iterator.rs  lib.rs  lifetime.rs  prev.rs  structures.rs
crates/hyperion/benches/: atomic.rs
crates/hyperion/src/: lib.rs
crates/hyperion/src/common/: command_channel.rs  config.rs  mod.rs  runtime.rs
crates/hyperion/src/common/util/: lifetime.rs  mod.rs  mojang.rs  sendable.rs
crates/hyperion/src/egress/: channel.rs  metadata.rs  mod.rs  stats.rs  sync_chunks.rs  sync_entity_state.rs
crates/hyperion/src/egress/player_join/: list.rs  mod.rs
crates/hyperion/src/ingress/: decode.rs  mod.rs
crates/hyperion/src/net/: decoder.rs  intermediate.rs  mod.rs  packet_channel.rs  packets.rs  proxy.rs
crates/hyperion/src/net/agnostic/: sound.rs
crates/hyperion/src/net/encoder/: mod.rs  util.rs
crates/hyperion/src/simulation/: animation.rs  command.rs  entity_kind.rs  event.rs  handlers.rs  inventory.rs  mod.rs  packet.rs  packet_state.rs  skin.rs
crates/hyperion/src/simulation/blocks/: chunk.rs  manager.rs  mod.rs  shared.rs
crates/hyperion/src/simulation/blocks/loader/: mod.rs  parse.rs
crates/hyperion/src/simulation/blocks/loader/parse/: section.rs
crates/hyperion/src/simulation/metadata/: block_display.rs  display.rs  entity.rs  item.rs  living_entity.rs  mod.rs  player.rs  status.rs  type.rs
crates/hyperion/src/simulation/metadata/entity/: flags.rs
crates/hyperion/src/spatial/: mod.rs
crates/hyperion/src/storage/: bits.rs  buf.rs  db.rs  mod.rs  thread_local.rs
crates/hyperion/src/storage/event/: sync.rs
crates/hyperion/src/storage/event/queue/: event_queue.rs  mod.rs
crates/hyperion/tests/: collision.rs  entity.rs  packet_channel.rs  spatial.rs
crates/packet-channel/: Cargo.toml  README.md
crates/packet-channel/benches/: packet_channel.rs
crates/packet-channel/src/: lib.rs
crates/packet-channel/tests/: packet_channel.rs
crates/simd-utils/: Cargo.toml  README.md
crates/simd-utils/src/: lib.rs
crates/system-order/src/: lib.rs
crates/vanilla-behaviors/: Cargo.toml  README.md
crates/vanilla-behaviors/src/: lib.rs  module.rs
crates/vanilla-behaviors/src/command/: gamemode.rs
crates/vanilla-behaviors/src/module/: natural_damage.rs  respawn.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/components/: GithubSnippet.vue
docs/architecture/: game-server.md  introduction.md  proxy.md
docs/bedwars/: introduction.md
events/bedwars/: Cargo.toml
events/bedwars/src/: command.rs  lib.rs  main.rs  plugin.rs  skin.rs
events/bedwars/src/command/: fly.rs  raycast.rs  shoot.rs  speed.rs  xp.rs
events/bedwars/src/plugin/: attack.rs  block.rs  bow.rs  (+4 more)
events/tag/: Cargo.toml  build.rs
events/tag/src/: command.rs  lib.rs  main.rs  module.rs
k8s-setup/: README.md
kubernetes/: README.md  hyperion-configmap.yaml  hyperion-namespace.yaml  hyperion-proxy-deployment.yaml  rust-mc-bot-deployment.yaml  tag-deployment.yaml
terraform/: .gitignore  README.md  aws-eks.tf  deploy.sh  main.tf  servers.tf  variables.tf
tools/antithesis-bot/: Cargo.toml
tools/antithesis-bot/src/: bot.rs  lib.rs  main.rs
tools/packet-inspector/: Cargo.toml  build.rs
tools/packet-inspector/src/: app.rs  lib.rs  tri_checkbox.rs
tools/rust-mc-bot/: Cargo.toml
tools/rust-mc-bot/src/: lib.rs  main.rs  net.rs  packet_utils.rs
(+29 files in other folders)
