[package]
name = "geometry"
version.workspace = true
edition.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
glam = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
ordered-float = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
tango-bench = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "general"
harness = false
