[package]
name = "hyperion-command"
version.workspace = true
edition.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
bevy = { workspace = true }
derive_more = { workspace = true }
hyperion = { workspace = true }
hyperion-utils = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
valence_bytes = { workspace = true }

[lints]
workspace = true
