[package]
name = "hyperion-genmap"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
bevy = { workspace = true }
hyperion = { workspace = true }
hyperion-utils = { workspace = true }

[lints]
workspace = true
