[package]
name = "hyperion-gui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
flecs_ecs = { workspace = true }
hyperion = { workspace = true }
hyperion-inventory = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
valence_protocol = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
