[package]
name = "hyperion-item"
version.workspace = true
edition.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
bevy = { workspace = true }
bytemuck = "1.23.1"
valence_protocol = { workspace = true }
hyperion = { workspace = true }
hyperion-inventory = { workspace = true }
hyperion-utils = { workspace = true }
derive_more = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
