[package]
name = "hyperion-respawn"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
bevy = {workspace = true}
hyperion = {workspace = true}
tracing = {workspace = true}
valence_protocol = {workspace = true}
valence_server = {workspace = true}

[lints]
workspace = true
