[dependencies]
anyhow = {workspace = true}
directories = {workspace = true}
sha2 = {workspace = true}
hex = {workspace = true}
hyperion-packet-macros = {workspace = true}
tracing = {workspace = true}
reqwest = {workspace = true}
flate2 = {workspace = true}
tar = {workspace = true}
tokio-util = {workspace = true}
tokio = {workspace = true}
futures-util = {workspace = true}
valence_protocol = { workspace = true }

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "hyperion-utils"
publish = false
readme = "README.md"
version.workspace = true
