[[bench]]
harness = false
name = "set"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
base64 = { workspace = true }
bitfield-struct = { workspace = true }
bitvec = { workspace = true }
boxcar = { workspace = true }
bumpalo = { workspace = true }
bvh-region = { workspace = true }
bytemuck = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
colored = { workspace = true }
derive_more = { workspace = true }
enumset = { workspace = true }
bevy.workspace = true
fastrand = { workspace = true }
flate2 = { workspace = true, features = ["zlib-ng"] }
geometry = { workspace = true }
glam = { workspace = true, features = ["serde"] }
heapless = { workspace = true }
heed = { workspace = true }
humantime = { workspace = true }
hyperion-crafting = { workspace = true }
hyperion-inventory = { workspace = true }
hyperion-nerd-font = { workspace = true }
hyperion-packet-macros = { workspace = true }
hyperion-palette = { workspace = true }
hyperion-proto = { workspace = true }
hyperion-text = { workspace = true }
hyperion-utils = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
kanal = { workspace = true }
libc = { workspace = true }
libdeflater = { workspace = true }
memmap2 = { workspace = true }
more-asserts = { workspace = true }
ndarray = { workspace = true }
once_cell = { workspace = true }
packet-channel = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rkyv = { workspace = true }
roaring = { workspace = true }
rustc-hash = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-webpki = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
simd-utils = { workspace = true }
thiserror = { workspace = true }
thread_local = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-rustls = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-tracy = { workspace = true }
uuid = { workspace = true }
valence_anvil = { workspace = true }
valence_bytes = { workspace = true }
valence_generated = { workspace = true }
valence_ident = { workspace = true }
valence_nbt = { workspace = true }
valence_protocol = { workspace = true }
valence_registry = { workspace = true }
valence_server = { workspace = true }
valence_text = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
divan = { workspace = true }
fastrand = { workspace = true }
hyperion-genmap = { workspace = true }
serial_test = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "hyperion"
publish = false
readme = "README.md"
version.workspace = true
