[dependencies]
arc-swap = { workspace = true }
bevy = { workspace = true }
more-asserts = { workspace = true }
valence_protocol = { workspace = true }

[dev-dependencies]
proptest = {workspace = true}

[lints]
workspace = true

[package]
authors = ["TestingPlant"]
edition.workspace = true
name = "packet-channel"
publish = false
readme = "README.md"
version.workspace = true
