[package]
name = "antithesis-bot"
version.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true

[dependencies]
antithesis.workspace = true
dotenvy.workspace = true
envy.workspace = true
eyre.workspace = true
rand = "0.9.0-beta.1"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
valence_protocol.workspace = true

[lints]
workspace = true